- Bug 2511 - HT Greenfield is not working
- Bug 2512 - Byte mode not configured correctly in red-queue-disc-test-suite.cc
- Bug 2513 - ParetoRandomVariable needs a "scale", not a "mean" attribute.
- Bug 2518 - Suppress printing of list of modules for Python programs
- Bug 2521 - Include ipv6-option.h in wscript
- Bug 2527 - PrintRoutingTable extended to add an optional Time::Units parameter
- Bug 2529 - Missing trace when Block ACK timeout is triggered or when missing MPDUs are announced by a Block ACK response
- Bug 2530 - Rename aodv::SetBalckListTimeout to aodv::SetBlackListTimeout
- Bug 2532 - Inconsistencies between 802.11n MCS and NSS value reported in TXVECTOR
- Bug 2533 - Provide a better 802.11n/ac PHY abstraction model for SIMO, MISO and MIMO
- Bug 2535 - memory leak in bench-simulator.cc
- Bug 2536 - fixed dead assignment and potential memory leak in wimax
- Bug 2537 - Dead assigment on CoDel::DoDequeue
- Bug 2538 - fixed dead assignment on tap-bridge
- Bug 2540 - fixed dead assignment on mesh/ie-dot11s-perr
- Bug 2541 - preamble not assigned correctly
- Bug 2542 - dead assignment on wifi mac-low
- Bug 2545 - Optimized build fails for flow-monitor
- Bug 2547 - dead assignments on various tcp congestion controls
- Bug 2551 - wifi preamble should be part of TXVECTOR
- Bug 2552 - Remove code duplication between Yans and Spectrum
- Bug 2561 - TCP can not use Connect after a BindToNetDevice
- Bug 2563 - Modify pybindgen version check to >= minimum version required
- Bug 2564 - Simulation crashes when CtsTimeout is triggered for A-MPDU transmissions
- Bug 2566 - BlockAckManager::GetNRetryNeededPackets missing some packets in the queue
- Bug 2577 - simulation crashes when A-MPDU and multiple TOS are used with RTS-CTS enabled
- Bug 2578 - Assert "Internal collision but no packet in queue" unexpectedly triggered
- Bug 2584 - MacLow triggers StartNext even if there is no TXOP
- Bug 2590 - Minor enhancements in red-queue-disc{.h, .cc}