@@ -360,7 +360,8 @@ WifiRemoteStationManager::WifiRemoteStationManager ()
     m_useNonErpProtection (false),
     m_useGreenfieldProtection (false),
     m_shortPreambleEnabled (false),
-    m_shortSlotTimeEnabled (false)
+    m_shortSlotTimeEnabled (false),
+    m_rifsPermitted (false)
 {
 }
 
@@ -463,6 +464,12 @@ WifiRemoteStationManager::SetShortSlotTimeEnabled (bool enable)
   m_shortSlotTimeEnabled = enable;
 }
 
+void
+WifiRemoteStationManager::SetRifsPermitted (bool allow)
+{
+  m_rifsPermitted = allow;
+}
+
 bool
 WifiRemoteStationManager::GetShortSlotTimeEnabled (void) const
 {
@@ -473,6 +480,12 @@ bool
 WifiRemoteStationManager::GetShortPreambleEnabled (void) const
 {
   return m_shortPreambleEnabled;
+}
+
+bool
+WifiRemoteStationManager::GetRifsPermitted (void) const
+{
+  return m_rifsPermitted;
 }
 
 WifiRemoteStationManager::ProtectionMode
